--- a/CLIENTE/UF1842/E4/inicio.html
+++ b/CLIENTE/UF1842/E4/inicio.html
@@ -246,9 +246,9 @@
                   <div class="container" >
                     <div class="info">
                       <div class="cont">
-                        <button id="prev" class="nov"> <img src="http://abarcarodriguez.com/lab/prev.png"/> </button>
-                        <button id="play" class="nov"> <img class="pad" src="http://abarcarodriguez.com/lab/play.png"/> </button>
-                        <button id="next" class="nov"> <img src="http://abarcarodriguez.com/lab/next.png"/> </button>
+                        <button id="prev" class="nov"> <img src="img/prev.png"/></button>
+                        <button id="play" class="nov"> <img class="pad" src="img/play.png"/> </button>
+                        <button id="next" class="nov"> <img src="img/next.png"/> </button>
                       </div>
                     </div>
                   </div>
