--- a/CLIENTE/UF1843/E6/inicio.html
+++ b/CLIENTE/UF1843/E6/inicio.html
@@ -29,10 +29,10 @@
 	
 			<tr>
 		
-			<td><input type="button" value="Letras amarillo" onClick="cambiarColores(z)"/></td>
-			<td><input type="button" value="Agrandar Letras" onClick="zoomIn()"></td>
-			<td><input type="button" value="Disminuir Letra" onClick="zoomOut()"></td>
-			<td><input type="button" value="Invertir" onClick="cambiarFondo(h)"/></td>
+			<td><input id="q" type="button" value="Letras amarillo" onClick="cambiarColores(z)"/></td>
+			<td><input id="q" type="button" value="Agrandar Letras" onClick="zoomIn()"></td>
+			<td><input id="q" type="button" value="Disminuir Letra" onClick="zoomOut()"></td>
+			<td><input id="q" type="button" value="Invertir" onClick="cambiarFondo(h)"/></td>
 			
 			
 			</tr>
