--- a/CLIENTE/UF1843/E6/inicio.html
+++ b/CLIENTE/UF1843/E6/inicio.html
@@ -72,7 +72,7 @@
           <table class="discos">
             <tr>
               <td rowspan="6">
-				  <td rowspan="6"><a id="m"><img  src="img/merdenoms.jpg" width="250" height="250" alt="merdenoms"/>
+				  <td rowspan="6"><a id="m" href="https://www.amazon.es/Mer-Noms-Explicit-Perfect-Circle/dp/B008P2YK7O/ref=sr_1_1?ie=UTF8&qid=1551986821&sr=8-1&keywords=mer+de+noms" target="_blank"><img  src="img/merdenoms.jpg" width="250" height="250" alt="merdenoms"/>
 				</td>
               <td>Autor:</td>
               <td><Author>A Perfect Circle</Author></td>
@@ -101,7 +101,7 @@
           <br>
           <table class="read-more-target">
             <tr>
-              <td rowspan="6"><img src="img/subliminal text.jpg"  alt="slipknot" style="margin-left:70px; margin-right: 10px" /></td>
+              <td rowspan="6"><a href="https://www.amazon.es/Vol-3-Subliminal-Verses-Slipknot/dp/B008L6HX6O/ref=sr_1_13?ie=UTF8&qid=1551987023&sr=8-13&keywords=slipknot" target="_blank"/><img src="img/subliminal text.jpg"  alt="slipknot" style="margin-left:70px; margin-right: 10px" /></td>
               <td>Autor:</td>
               <td><Author>Slipknot</Author></td>
             </tr>
@@ -134,7 +134,7 @@
         <Generos id="slam" class="read-more-wrap">
           <table class="discos">
             <tr>
-              <td rowspan="6"><a id="s"><img  src="img/misery.jpg" width="250" height="250" alt="slagthertoprevail"/></a></td>
+              <td rowspan="6"><a id="s" href="https://www.amazon.es/Misery-Sermon-Explicit-Slaughter-Prevail/dp/B06XP4ZHWC/ref=sr_1_1?ie=UTF8&qid=1551987106&sr=8-1&keywords=slaughter+to+prevail" target="_blank"><img  src="img/misery.jpg" width="250" height="250" alt="slagthertoprevail"/></a></td>
               <td>Autor:</td>
               <td><Author>Slaughter to Prevail</Author></td>
             </tr>
@@ -161,7 +161,7 @@
           </table>
           <table class="read-more-target">
             <tr>
-              <td rowspan="6"><img src="img/lacerate.jpg"  alt="lacerate" style="margin-right: 11px" /></td>
+              <td rowspan="6"><a href="https://www.amazon.es/Misanthropy-Explicit-Lacerate-Thy-Maker/dp/B07CWHQ5CB/ref=sr_1_1?ie=UTF8&qid=1551987143&sr=8-1&keywords=lacerate+thy+maker" target="_blank"/><img src="img/lacerate.jpg"  alt="lacerate" style="margin-right: 11px" /></td>
               <td>Autor:</td>
               <td><Author>Lacerate Thy Maker</Author></td>
             </tr>
@@ -194,7 +194,7 @@
         <Generos id="HardCore" class="read-more-wrap">
           <table class="discos">
             <tr>
-              <td rowspan="6"><a id="h"><img src="img/ashes.jpg" width="250" height="250" alt="ashes"/></a></td>
+              <td rowspan="6"><a id="h" href="https://www.amazon.es/Scatter-Ashes-Brutality-Will-Prevail/dp/B01KBHQS7K/ref=sr_1_4?ie=UTF8&qid=1551987215&sr=8-4&keywords=brutality+will" target="_blank"><img src="img/ashes.jpg" width="250" height="250" alt="ashes"/></a></td>
               <td>Autor:</td>
               <td><Author>Brutality Will Prevail</Author></td>
             </tr>
@@ -222,7 +222,7 @@
           <br>
           <table class="read-more-target">
             <tr>
-              <td rowspan="6"><img src="img/tracks.jpg"  alt="tracks" style="margin-right: 10px" /></td>
+              <td rowspan="6"><a href="https://www.amazon.es/Laugh-Tracks-Knocked-Loose/dp/B07BTD8Y6P/ref=sr_1_1?ie=UTF8&qid=1551987261&sr=8-1&keywords=knocked+loose" target="_blank"/><img src="img/tracks.jpg"  alt="tracks" style="margin-right: 10px" /></td>
               <td>Autor:</td>
               <td><Author>Knocked Loose</Author></td>
             </tr>
